--- a/index.html
+++ b/index.html
@@ -203,14 +203,14 @@
           <div class="modal-footer">
             <button
               type="button"
-              class="btn btn-secondary"
+              class="bg-gray-400 btn btn-secondary"
               data-dismiss="modal"
             >
               Close
             </button>
             <button
               type="submit"
-              class="btn btn-primary"
+              class="bg-blue-400 btn btn-primary"
               form="form-book"
               id="btn-form"
             >
