--- a/index.html
+++ b/index.html
@@ -249,14 +249,14 @@
           <div class="modal-footer">
             <button
               type="button"
-              class="btn btn-secondary btn-cancel"
+              class="bg-gray-400 btn btn-secondary btn-cancel"
               data-dismiss="modal"
             >
               Cancel
             </button>
             <button
               type="button"
-              class="btn btn-danger"
+              class="bg-red-400 btn btn-danger"
               id="btn-confirm-delete"
             >
               Delete
